--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,41 @@
 body {
-    margin: 20px;
+    margin: 30px;
 
+    background: cornsilk;
+
+    font: normal normal normal 24px/24px arial, sans-serif;
     text-align: center;
+}
+
+.player-btn {
+    box-shadow: -3px 3px lightslategrey;
+
+    margin: 4px 4px;
+
+    border: transparent;
+    border-bottom: 2px solid lightcoral;
+    border-radius: 6px;
+
+    padding: 6px 16px;
+
+    background: darkcyan;
+
+    color: cornsilk;
+
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.player-btn:hover {
+    box-shadow: -2px 2px lightslategrey;
+
+    margin: 2px 2px;
+
+    background: lightcoral;
+
+    padding: 8px 16px;
+
+    font-weight: bold;
 }
 
 .card {
@@ -16,15 +50,14 @@ body {
 
     background: darkcyan;
 
-    padding: 20px;
+    padding: 40px;
 
     width: 500px;
     height: 150px;
 
-    font: normal normal normal 16px/24px arial, sans-serif;
     color: cornsilk;
 
-    cursor: pointer;
+    cursor: auto;
     transition: 0.4s;
 }
 
@@ -54,12 +87,14 @@ body {
 }
 
 .profile-img {
+    margin: auto auto;
+
     border-radius: 8px;
     border-bottom-right-radius: 80px;
     border-top-left-radius: 80px;
 
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 160px;
 
     transition: 0.4s;
 }
