--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,17 @@
 body {
-    margin: 30px;
+    margin: 40px;
 
     background: cornsilk;
 
     font: normal normal normal 24px/24px arial, sans-serif;
+    color: cornsilk;
     text-align: center;
+}
+
+.btn-wrapper {
+    display: block;
+
+    margin: 60px;
 }
 
 .player-btn {
@@ -16,10 +23,10 @@ body {
     border-bottom: 2px solid lightcoral;
     border-radius: 6px;
 
-    padding: 6px 16px;
-
     background: darkcyan;
+    padding: 8px 20px;
 
+    font: normal normal normal 16px/12px arial, sans-serif;
     color: cornsilk;
 
     cursor: pointer;
@@ -33,9 +40,10 @@ body {
 
     background: lightcoral;
 
-    padding: 8px 16px;
+    padding: 10px 28px;
 
     font-weight: bold;
+    transition-duration: 0.1s;
 }
 
 .card {
@@ -43,19 +51,18 @@ body {
     justify-content: space-around;
     box-shadow: -6px 6px lightslategrey;
 
-    margin: 100px auto;
+    margin: 60px auto;
     
     border-radius: 6px;
     border-bottom: 6px solid lightcoral;
 
     background: darkcyan;
-
     padding: 40px;
 
     width: 500px;
     height: 150px;
 
-    color: cornsilk;
+    font-size: 20px;
 
     cursor: auto;
     transition: 0.4s;
@@ -100,8 +107,6 @@ body {
 }
 
 .info-text {
-    font-size: 16px;
-
     margin: auto auto;
 
     line-height: 15px;
